--- a/p0291simpleactivityresult/src/main/AndroidManifest.xml
+++ b/p0291simpleactivityresult/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".NameActivity"></activity>
+        <activity android:name=".AlignActivity"></activity>
+        <activity android:name=".ColorActivity" />
+        <activity android:name=".NameActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
