--- a/p0331sharedpreferences/src/main/AndroidManifest.xml
+++ b/p0331sharedpreferences/src/main/AndroidManifest.xml
@@ -9,8 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SQLiteTransactionActivity"></activity>
-        <activity android:name=".SQLiteQueryActivity" />
+        <activity android:name=".SQLiteOnUpgradeDBActivity"
+            android:label="SQLiteOnUpgradeDB">
+
+        </activity>
+        <activity
+            android:name=".SQLiteTransactionActivity"
+            android:label="SQLiteTransaction"></activity>
+        <activity
+            android:name=".SQLiteQueryActivity"
+            android:label="SQLiteQuery"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
