--- a/p0401_layoutinflater/src/main/AndroidManifest.xml
+++ b/p0401_layoutinflater/src/main/AndroidManifest.xml
@@ -9,6 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity
+            android:name=".SimpleListEventsActivity"
+            android:label="SimpleListEvents"></activity>
+        <activity
+            android:name=".SimpleListChoiceActivity"
+            android:label="SimpleListChoice" />
+        <activity
+            android:name=".SimpleListActivity"
+            android:label="SimpleList" />
+        <activity
+            android:name=".LayoutInflaterListActivity"
+            android:label="LayoutInflaterList" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
