--- a/p0401_layoutinflater/build.gradle
+++ b/p0401_layoutinflater/build.gradle
@@ -6,7 +6,7 @@ android {
 
 
     defaultConfig {
-        applicationId "com.example.p0401_layoutinflater"
+        applicationId 'com.example.p0401_layoutinflater'
         minSdkVersion 15
         targetSdkVersion 29
         versionCode 1
